[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mel"
dynamic = ["version"]
description = "Mole Evolution Laboratory"
authors = [
    {name = "Angelos Evripiotis"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "colorama",
    "opencv-python",
    "pandas",
    "pygame",
    "pytorch-lightning",
    "timm>=1.0.20",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "ty",
    "pytest",
    "ruff",
    "vulture",
]

[project.scripts]
mel = "mel.cmd.mel:main"
mel-debug = "mel.cmddebug.meldebug:main"

[project.urls]
Homepage = "https://github.com/aevri/mel"
Repository = "https://github.com/aevri/mel"

[tool.setuptools]
packages = [
    "mel",
    "mel.cmd",
    "mel.cmddebug",
    "mel.lib",
    "mel.micro",
    "mel.rotomap",
]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "mel.__version__"}

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Rule codes enabled for static analysis:
# - A: flake8-builtins (prevent shadowing built-ins)
# - B: flake8-bugbear (likely bugs and design problems)
# - C4: flake8-comprehensions (better list/set/dict comprehensions)
# - FURB: refurb (modernize Python code)
# - N: pep8-naming (naming conventions)
# - PLE: pylint errors (subset of pylint)
# - PLW: pylint warnings (global statements, unnecessary comparisons, etc.)
# - I: isort (import sorting and organization)
# - W: pycodestyle warnings (whitespace and formatting issues)
# - F: pyflakes (unused imports, variables, undefined names)
# - PIE: flake8-pie (miscellaneous lints and performance improvements)
# - Q: flake8-quotes (enforce consistent quote style)
# - T10: flake8-debugger (detect debugger imports like pdb)
# - ISC: flake8-implicit-str-concat (implicit string concatenation issues)
# - RET: flake8-return (return statement improvements)
# - SIM: flake8-simplify (code simplification opportunities)
# - UP: pyupgrade (upgrade Python syntax for newer versions)
# - RUF: ruff-specific (ruff-specific linting rules)
# - PT: flake8-pytest-style (pytest style improvements)
# - PERF: perflint (performance anti-patterns)
# - RSE: flake8-raise (remove unnecessary parentheses on raised exceptions)
# - EXE: flake8-executable (shebang line checks)
# - ARG: flake8-unused-arguments (unused function/method arguments)
# - DTZ: flake8-datetimez (enforce timezone-aware datetime usage)
# - FA: flake8-future-annotations (future annotations best practices)
# - FLY: flynt (prefer f-strings over static string joins)
# - G: flake8-logging-format (logging statement formatting)
# - INT: flake8-gettext (gettext/internationalization best practices)
# - LOG: flake8-logging (logging module usage)
# - PD: pandas-vet (pandas best practices)
# - PGH: pygrep-hooks (blanket type:ignore/noqa, eval usage)
# - SLOT: flake8-slots (__slots__ for immutable classes)
# - TC: flake8-type-checking (move imports to TYPE_CHECKING blocks)
# - TID: flake8-tidy-imports (banned imports and relative parent imports)
# - YTT: flake8-2020 (sys.version misuse)
# - ASYNC: flake8-async (async best practices)
# - INP: flake8-no-pep420 (no implicit namespace packages, require __init__.py)
# - ICN: flake8-import-conventions (enforce standard import aliases like numpy as np)
# - SLF: flake8-self (prevent access to private members of other classes)
# - FBT: flake8-boolean-trap (avoid boolean positional args and defaults)
# - NPY: numpy (enforce modern numpy random API and deprecated usage)
# - PYI: flake8-pyi (type stub and typing best practices)
# - EM101: flake8-errmsg (no string literals in exception constructors, keeps raise lines short in tracebacks)
# - EM102: flake8-errmsg (no f-strings in exception constructors, keeps raise lines short in tracebacks)
# - EM103: flake8-errmsg (no .format() in exception constructors, keeps raise lines short in tracebacks)
# - PLR1: pylint refactor (argument redefinition, comparison merging)
# - PLR5: pylint refactor (collapsible else/elif blocks)
# - PLR04: pylint refactor (use from-import for module aliasing)
# - BLE: flake8-blind-except (prevent catching blind Exception)
# - D2: pydocstyle (docstring whitespace and formatting rules)
# - D3: pydocstyle (docstring quoting, use triple double-quotes)
# - D4: pydocstyle (docstring content: blank lines, argument descriptions)
# - E: pycodestyle errors (indentation, whitespace, syntax, line length)
# Evaluated and rejected:
# - TRY3: all existing violations are intentional (exception type conversion, fallback returns)
extend-select = ["A", "B", "BLE", "C4", "D2", "D3", "D4", "E", "EM101", "EM102", "EM103", "FURB", "N", "NPY", "PLE", "PLW", "PLR1", "PLR04", "PLR5", "I", "W", "F", "PIE", "Q", "T10", "ISC", "RET", "SIM", "UP", "RUF", "PT", "PERF", "RSE", "EXE", "ARG", "DTZ", "FA", "FLY", "G", "INT", "LOG", "PD", "PGH", "PYI", "SLOT", "TC", "TID", "YTT", "ASYNC", "INP", "ICN", "SLF", "FBT"]
# D203 and D213 conflict with D211 and D212 respectively; ignore the unwanted ones
ignore = ["D203", "D213"]

[tool.vulture]
ignore_names = ["training_step", "validation_step", "configure_optimizers"]
exclude = ["*__t.py", "mel/rotomap/detectmoles.py", "mel/rotomap/identifynn.py"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unresolved-reference = "error"
deprecated = "error"
division-by-zero = "warn"

# -----------------------------------------------------------------------------
# Copyright (C) 2026 Angelos Evripiotis.
# Generated with assistance from Claude Code.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------ END-OF-FILE ----------------------------------
